--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,13 @@
 <h1>"Hello world"</h1>
+
+
+<script>
+    $(document).ready(() => {
+  // This file just does a GET request to figure out which user is logged in
+  // and updates the HTML on the page
+  $.get("/api/user_data").then(data => {
+    $(".member-name").text(data.email);
+  });
+});
+
+</script>
