Event listeners setup

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,13 +1,97 @@
-<h1>"Hello world"</h1>
+<h1>Favorite Jobs</h1>
+
+<div class="container">
+  {{!-- Form --}}
+  <form>
+    <div class="row">
+      <div class="col">
+        <input type="text" class="form-control" id="form-title" placeholder="Job Title">
+      </div>
+      <div class="col">
+        <input type="text" class="form-control" id="form-company" placeholder="Company">
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col">
+        <input type="text" class="form-control" id="form-location" placeholder="Location">
+      </div>
+      <div class="col">
+        <input type="text" class="form-control" id="form-snippit" placeholder="Description">
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col">
+        <input type="text" class="form-control" id="form-link" placeholder="url">
+      </div>
+      <div class="col">
+        {{!-- This is going to have to be changed to Date format--like a calendar --}}
+        <input type="text" class="form-control" id="form-deadline" placeholder="Deadline">
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col">
+        <label for="form-notes">Notes</label>
+        <input type="text" class="form-control" id="form-notes">
+      </div>
+      <div class="col">
+        <label for="form-status">Application Status</label>
+        <select class="form-control" id="form-status">
+          <option>Interested</option>
+          <option>Working on Application</option>
+          <option>Applied</option>
+          <option>Interviewing</option>
+          <option>Waiting for offer</option>
+          <option>Offered Job</option>
+          <option>Unknown</option>
+          <option>No offer</option>
+        </select>
+      </div>
+      <div class="col">
+        <div class="col">
+          <label for="form-interest">Interest Level</label>
+          <select class="form-control" id="form-interest">
+            <option>High</option>
+            <option>Medium</option>
+            <option>Low</option>
+          </select>
+        </div>
+      </div>
 
 
+    </div>
+    <br>
+    <input class="btn btn-primary" type="submit" id="submit" value="Submit">
+  </form>
+
+  {{!-- <div class="card">
+    <h5 class="card-header" id="title-{{#each id}}">Title</h5>
+    <div class="card-body">
+      <h5 class="card-title" id="company-{{#id}}">Company Name</h5>
+      <br>
+      <p class="card-text" id="location-{{#each id}}">Location:</p>
+      <p class="card-text" id="snippet-{{#each id}}">Description:</p>
+      <p class="card-text" id="link-{{#each id}}">URL:</p>
+      <p class="card-text" id="deadline-{{#each id}}">Deadline:</p>
+      <p class="card-text" id="interest-{{#each id}}">Interest:</p>
+      <p class="card-text" id="notes-{{#each id}}">Notes:</p>
+      <p class="card-text" id="status-{{#each id}}">Status:</p>
+      <a href="#" id="edit-button-{{#each id}}" class="btn btn-primary">Edit</a>
+      <a href="#" id="delete-button-{{#each id}}" class="btn btn-primary">Delete</a>
+    </div>
+  </div> --}}
+</div>
 <script>
-    $(document).ready(() => {
-  // This file just does a GET request to figure out which user is logged in
-  // and updates the HTML on the page
-  $.get("/api/user_data").then(data => {
-    $(".member-name").text(data.email);
+
+  $(document).ready(() => {
+    // This file just does a GET request to figure out which user is logged in
+    // and updates the HTML on the page
+    $.get("/api/user_data").then(data => {
+      $(".member-name").text(data.email);
+    });
   });
-});
+
 
 </script>
