--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -25,6 +25,13 @@
       <div class="col">
         <input type="text" class="form-control" id="form-link" placeholder="url">
       </div>
+
+      <div class="form-group">
+        {{!-- <label for="form-salary">Salary:</label> --}}
+        <input type="number" class="form-control" id="form-salary" aria-describedby="salary"
+          placeholder="Salary">
+      </div>
+
       <div class="col">
         {{!-- This is going to have to be changed to Date format--like a calendar --}}
         <input type="text" class="form-control" id="form-deadline" placeholder="Deadline">
