added delete/edit routes also did ajax calls for front end

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -80,6 +80,7 @@
     <div class="card-body">
       <h5 class="card-title" id="company-{{id}}">{{company}}</h5>
       <br>
+      <p class="card-text" id="salary-{{id}}">Salary:{{salary}}</p>
       <p class="card-text" id="formattedLocation-{{id}}">Location:{{formattedLocation}}</p>
       <p class="card-text" id="snippet-{{id}}">Description:{{snippet}}</p>
       <p class="card-text" id="url-{{id}}">URL:{{url}}</p>
