fixed delete button

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -88,8 +88,8 @@
       <p class="card-text" id="interest-{{id}}">Interest:{{interested}}</p>
       <p class="card-text" id="notes-{{id}}">Notes:{{notes}}</p>
       <p class="card-text" id="status-{{id}}">Status:{{status}}</p>
-      <a href="#" id="edit-button-{{id}}" class="btn btn-primary">Edit</a>
-      <a href="#" id="delete-button-{{id}}" class="btn btn-primary">Delete</a>
+      <a href="#" id="{{id}}" class="edit-button btn btn-primary">Edit</a>
+      <a href="#" id="{{id}}" class="delete-button btn btn-primary">Delete</a>
     </div>
   </div>
   {{/each}}
