--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,172 @@
-form.signup,
+/* form.signup,
 form.login {
   margin-top: 50px;
+} */
+
+
+* {
+	-ms-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
+
+html,
+body {
+	width: 100%;
+	height: 100%;
+	background: url(https://subtlepatterns.com/patterns/sativa.png) repeat fixed;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 200;
+}
+
+fieldset {
+	margin-bottom: 65px;
+}
+
+.login, .signup {
+	position: relative;
+	background: #fff;
+	border-radius: 4px;
+}
+
+.legend {
+	position: relative;
+	width: 100%;
+	display: block;
+	background: #ff7052;
+	padding: 15px;
+	color: #fff;
+	font-size: 20px;
+}
+
+#signUp {
+	/* position: relative;
+	width: 100%;
+	display: block; */
+	background: #0a7a9c;
+	/* padding: 15px;
+	color: #fff;
+	font-size: 20px; */
+}
+
+#email-input {
+	position: relative;
+	width: 90%;
+	margin: 15px auto;
+}
+
+#password-input{
+  position: relative;
+	width: 90%;
+	margin: 15px auto;
+}
+
+.btn {
+	width: 50px;
+	height: 50px;
+	display: block;
+	margin: 0 auto -8px auto;
+	background: #fff;
+	border-radius: 100%;
+	border: 1px solid #ff7052;
+	color: #ff7052;
+	font-size: 24px;
+	cursor: pointer;
+	box-shadow: 0px 0px 0px 7px #fff;
+	transition: 0.2s ease-out;
+}
+
+#register {
+  width: auto;
+  height: 40px;
+  border-radius: 10px;
+	border: 1px solid #0a7a9c;
+	color: #0a7a9c;
+	font-size: 15px;
+}
+
+.btn:hover,
+.btn:focus {
+	background: #ff7052;
+	color: #fff;
+	outline: 0;
+}
+
+#register:hover,
+#register:focus {
+  background: #0a7a9c;
+  color: #fff;
+}
+
+.feedback {
+	position:absolute;
+	bottom: -70px;
+	width: 100%;
+	text-align: center;
+	color: #fff;
+	background: #2ecc71;
+	padding: 8px 0;
+	font-size: 12px;
+	display: none;
+	opacity: 0;
+	border-radius: 5px;
+}
+
+p {
+	text-align: center;
+}
+
+@media screen and (max-width: 414px) {
+.legend{
+	display: none;
+}
+
+#loginPage, html{
+	background: url(https://cdn.dribbble.com/users/1018473/screenshots/5344535/login.png);
+	background-size: 100% 50%;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+
+}
+
+fieldset {
+	margin-top: 250px;
+}
+
+#login, #register {
+	width: 100px;
+	height: 40px;
+	margin: 25px auto -15px auto;
+	border-radius: 20px;
+	background: #fd8105;
+	color: #fff;
+	font-size: 14px;
+}
+
+.pvw-title span {
+	display: none;
+}
+.pvw-title:after{
+	content: "login";
+	margin-bottom: 50px;
+}
+
+#registerPage,html {
+	background: url(https://i.pinimg.com/originals/65/dc/a6/65dca69f78972935caf61580e7c17bd9.png);
+	background-size: 100% 50%;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+}
+
+#register {
+	background: #0a7a9c;
+}
+
+
+
+
 }
