Added calendar dropdown for deadline selection

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -34,10 +34,14 @@
           <input type="number" class="form-control" id="form-salary" aria-describedby="salary" placeholder="Salary">
         </div>
       </div>
-      <div class="col">
-        {{!-- This is going to have to be changed to Date format--like a calendar --}}
+
+      <div class="col-sm-6 form-group">Deadline:
+                <input type="text" id="form-deadline">
+                </input>
+            </div>
+      {{!-- <div class="col">
         <input type="text" class="form-control" id="form-deadline" placeholder="Deadline">
-      </div>
+      </div> --}}
     </div>
 
     <br>
