--- a/public/stylesheets/toApply.css
+++ b/public/stylesheets/toApply.css
@@ -1,3 +1,72 @@
 .bootstrap-datetimepicker-widget tr:hover {
     background-color: #808080;
 }
+
+body{
+    background-image: url(https://res.cloudinary.com/practicaldev/image/fetch/s--ONUXUq1x--/c_imagga_scale,f_auto,fl_progressive,h_900,q_auto,w_1600/https://dev-to-uploads.s3.amazonaws.com/i/m043n7axfq8owbtpms0b.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+h1 {
+    text-align: center;
+    margin-bottom: 30px;
+    color: white;
+}
+
+
+fieldset {
+    width: 70%;
+   border: 1px solid silver; 
+   border-radius: 4px;
+   box-shadow: 5px 10px rgb(136, 139, 141);
+   margin: 20px auto;
+   padding: 20px 30px;
+   color: white;
+    background-color: #0093E9;
+    background-image: -webkit-linear-gradient(270deg, #0093E9 0%, #80D0C7 100%);
+    background-image: -moz-linear-gradient(270deg, #0093E9 0%, #80D0C7 100%);
+    background-image: -o-linear-gradient(270deg, #0093E9 0%, #80D0C7 100%);
+    background-image: linear-gradient(270deg, #0093E9 0%, #80D0C7 100%);
+    
+
+opacity: 93%;
+
+}
+
+.form-control {
+    box-shadow: 2px 4px teal
+}
+
+.card {
+  margin: 0 auto;
+    margin-bottom: 20px;
+    box-shadow: 3px 5px rgb(136, 139, 141);
+    width: 70%;
+    background-color: #8BC6EC;
+background-image: -webkit-linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+background-image: -moz-linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+background-image: -o-linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+    opacity: 93%;
+}
+
+.card-header {
+    background-color: #b0d2d3;
+}
+
+span{
+    font-weight: bold;
+    color: rgb(255, 253, 253);
+}
+
+
+
+
+
+
+
+
+
+
