--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -110,16 +110,51 @@
     <div class="card-body">
       <h5 class="card-title" id="company-{{id}}">{{company}}</h5>
       <br>
-      <p class="card-text" id="salary-{{id}}"><span>Salary: </span>{{salary}}</p>
-      <p class="card-text" id="formattedLocation-{{id}}"><span>Location: </span>{{formattedLocation}}</p>
-      <p class="card-text" id="snippet-{{id}}"><span>Description: </span>{{snippet}}</p>
-      <p class="card-text" id="url-{{id}}"><span>URL: </span>{{url}}</p>
-      <p class="card-text" id="deadline-{{id}}"><span>Deadline: </span>{{deadline}}</p>
-      <p class="card-text" id="interest-{{id}}"><span>Interest: </span>{{interested}}</p>
-      <p class="card-text" id="notes-{{id}}"><span>Notes: </span>{{notes}}</p>
-      <p class="card-text" id="status-{{id}}"><span>Status: </span>{{status}}</p>
+      <p class="card-text" id="salary-{{id}}"><span>Salary: </span><span class="job-card-view-field">{{salary}}</span> <input type="text" class="job-card-edit-field" id="salary-edit-{{ id }}" value="{{salary}}" style="display: none;"></p>
+
+
+      <p class="card-text" id="formattedLocation-{{id}}"><span>Location: </span><span class="job-card-view-field">{{formattedLocation}}</span> <input type="text" class="job-card-edit-field" id="formattedLocation-edit-{{ id }}" value="{{formattedLocation}}" style="display: none;"></input></p>
+
+      <p class="card-text" id="snippet-{{id}}"><span>Description: </span><span class="job-card-view-field">{{snippet}}</span> <input type="text" class="job-card-edit-field" id="snippet-edit-{{ id }}" value="{{snippet}}" style="display: none;"></p>
+
+
+      <p class="card-text" id="url-{{id}}"><span>URL: </span><span class="job-card-view-field">{{url}}</span> <input type="text" class="job-card-edit-field" id="url-edit-{{ id }}" value="{{url}}" style="display: none;"></p>
+
+
+      <p class="card-text" id="deadline-{{id}}"><span>Deadline: </span><span class="job-card-view-field">{{deadline}}</span> <input type="text" class="job-card-edit-field" id="deadline-edit-{{ id }}" value="{{deadline}}" style="display: none;"></p>
+
+
+      <p class="card-text" id="interest-{{id}}"><span>Interest: </span>{{interested}} 
+      <span class= "job-card-edit-field" id="interested-edit-{{id}}" value="{{interested}}" style="display: none;">
+      <select class="form-control" id="form-interest">
+              <option>High</option>
+              <option>Medium</option>
+              <option>Low</option>
+            </select>
+          </span></p>
+
+
+      <p class="card-text" id="notes-{{id}}"><span>Notes: </span><span class="job-card-view-field">{{notes}}</span> <input type="text" class="job-card-edit-field" id="notes-edit-{{ id }}" value="{{notes}}" style="display: none;"></p>
+
+
+      <p class="card-text" id="status-{{id}}"><span>Status: </span>{{status}}<span class= "job-card-edit-field" id="status-edit-{{id}}" value="{{status}}" style="display: none;">
+      <select class="form-control" id="form-status">
+            <option>Interested</option>
+            <option>Working on Application</option>
+            <option>Applied</option>
+            <option>Interviewing</option>
+            <option>Waiting for offer</option>
+            <option>Offered Job</option>
+            <option>Unknown</option>
+            <option>No offer</option>
+          </select>
+          </span></p>
+
+      
       <a href="#" id="{{id}}" class="edit-button btn btn-primary">Edit</a>
       <a href="#" id="{{id}}" class="delete-button btn btn-primary">Delete</a>
+      <a href="#" id="{{id}}" class="save-button btn btn-primary">save</a>
+      <a href="#" id="{{id}}" class="cancel-button btn btn-primary">cancel</a>
     </div>
   </div>
   {{/each}}
