--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -115,7 +115,7 @@
 
       <p class="card-text" id="formattedLocation-{{id}}"><span>Location: </span><span class="job-card-view-field">{{formattedLocation}}</span> <input type="text" class="job-card-edit-field" id="formattedLocation-edit-{{ id }}" value="{{formattedLocation}}" style="display: none;"></input></p>
 
-      <p class="card-text" id="snippet-{{id}}"><span>Description: </span><span class="job-card-view-field">{{snippet}}</span> <input type="text" class="job-card-edit-field" id="snippet-edit-{{ id }}" value="{{snippet}}" style="display: none;"></p>
+      <p class="card-text" id="snippet-{{id}}"><span>Description: </span><span class="job-card-view-field">{{snippit}}</span> <input type="text" class="job-card-edit-field" id="snippit-edit-{{id}}" value="{{snippit}}" style="display: none;"></p>
 
 
       <p class="card-text" id="url-{{id}}"><span>URL: </span><span class="job-card-view-field">{{url}}</span> <input type="text" class="job-card-edit-field" id="url-edit-{{ id }}" value="{{url}}" style="display: none;"></p>
