added edit button features

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -110,7 +110,7 @@
     <div class="card-body">
       <h5 class="card-title" id="company-{{id}}">{{company}}</h5>
       <br>
-      <p class="card-text" id="salary-{{id}}"><span>Salary: </span><span class="job-card-view-field">{{salary}}</span> <input type="text" class="job-card-edit-field" id="salary-edit-{{ id }}" value="{{salary}}" style="display: none;"></p>
+      <p class="card-text" id="salary-{{id}}"><span>Salary: </span><span class="job-card-view-field">{{salary}}</span> <input type="number" class="job-card-edit-field" id="salary-edit-{{ id }}" value="{{salary}}" style="display: none;"></p>
 
 
       <p class="card-text" id="formattedLocation-{{id}}"><span>Location: </span><span class="job-card-view-field">{{formattedLocation}}</span> <input type="text" class="job-card-edit-field" id="formattedLocation-edit-{{ id }}" value="{{formattedLocation}}" style="display: none;"></input></p>
