Some formatting fixes

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -24,7 +24,7 @@
   {{!-- Form --}}
   <form>
     <fieldset>
-      <legend class="legend">Enter a job here</legend>
+      <legend class="legend">Enter a job</legend>
       <div class="row">
         <div class="col">
           <input type="text" class="form-control" id="form-title" placeholder="Job Title">
