edit button fixed

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -102,7 +102,7 @@
 
   {{#if Jobs}}
   {{#each Jobs}}
-  <div class="card">
+  <div id= "card-{{id}}" class="card">
     <div class="col">
       <span class="job-card-view-field">
         <h5 class="card-header" id="title-{{{id}}}">{{jobtitle}}</h5>
