--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,6 +23,11 @@ body {
 	font-weight: 200;
 }
 
+.navbar {
+	background-color: #0a7a9c;
+}
+
+
 fieldset {
 	margin-bottom: 65px;
 }
@@ -120,53 +125,85 @@ p {
 	text-align: center;
 }
 
-@media screen and (max-width: 414px) {
-.legend{
-	display: none;
+/* member page */
+.btn-primary {
+	font-size: 20px;
+	border-radius: 15px;
+	margin: 10px auto;
+	padding: 5px;
+}
+#hand {
+	font-size: 50px;
+}
+.member-name {
+font-style: italic;
+font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-#loginPage, html{
-	background: url(https://cdn.dribbble.com/users/1018473/screenshots/5344535/login.png);
-	background-size: 100% 50%;
-	background-attachment: fixed;
-	background-repeat: no-repeat;
-
+#hand {
+	animation-name: hand-shaking;  /* Refers to the name of your @keyframes element below */
+	animation-duration: 2.5s;        /* Change to speed up or slow down */
+	animation-iteration-count: infinite;  /* Never stop waving */
+	transform-origin: 70% 70%;       /* Pivot around the bottom-left palm */
+	display: inline-block;
+}
+  
+@keyframes hand-shaking {
+	  0% { transform: rotate( 0.0deg) }
+	 10% { transform: rotate(14.0deg) }  /* The following five values can be played with to make the waving more or less extreme */
+	 20% { transform: rotate(-8.0deg) }
+	 30% { transform: rotate(14.0deg) }
+	 40% { transform: rotate(-4.0deg) }
+	 50% { transform: rotate(10.0deg) }
+	 60% { transform: rotate( 0.0deg) }  /* Reset for the last half to pause */
+	100% { transform: rotate( 0.0deg) }
 }
 
-fieldset {
-	margin-top: 250px;
-}
+@media screen and (max-width: 468px) {
+	.legend{
+		display: none;
+	}
 
-#login, #register {
-	width: 100px;
-	height: 40px;
-	margin: 25px auto -15px auto;
-	border-radius: 20px;
-	background: #fd8105;
-	color: #fff;
-	font-size: 14px;
-}
+	#loginPage, html{
+		background: url(https://cdn.dribbble.com/users/1018473/screenshots/5344535/login.png);
+		background-size: 100% 50%;
+		background-attachment: fixed;
+		background-repeat: no-repeat;
 
-.pvw-title span {
-	display: none;
-}
-.pvw-title:after{
-	content: "login";
-	margin-bottom: 50px;
-}
+	}
 
-#registerPage,html {
-	background: url(https://i.pinimg.com/originals/65/dc/a6/65dca69f78972935caf61580e7c17bd9.png);
-	background-size: 100% 50%;
-	background-attachment: fixed;
-	background-repeat: no-repeat;
-}
+	fieldset {
+		margin-top: 490px;
+	}
 
-#register {
-	background: #0a7a9c;
-}
+	#login, #register {
+		width: 100px;
+		height: 40px;
+		margin: 25px auto -15px auto;
+		border-radius: 20px;
+		background: #fd8105;
+		color: #fff;
+		font-size: 14px;
+	}
 
+	.pvw-title span {
+		display: none;
+	}
+	.pvw-title:after{
+		content: "login";
+		margin-bottom: 50px;
+	}
 
+	#registerPage,html {
+		background: url(https://i.pinimg.com/originals/65/dc/a6/65dca69f78972935caf61580e7c17bd9.png);
+		background-size: 100% 50%;
+		background-attachment: fixed;
+		background-repeat: no-repeat;
+	}
+
+	#register {
+		background: #0a7a9c;
+	}
 
 
 }
