Default value to salary input

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -47,8 +47,8 @@
         <div class="col">
           <input type="text" class="form-control" id="form-link" placeholder="url">
         </div>
-        <div class="col">
-          <input type="number" class="form-control" id="form-salary" aria-describedby="salary" placeholder="Salary">
+        <div class="col">Salary:
+          <input type="number" class="form-control" id="form-salary" aria-describedby="salary" value="0" placeholder="Salary">
         </div>
       </div>
       <br>
@@ -71,6 +71,7 @@
         <div class="col">
           <label for="form-status">Application Status</label>
           <select class="form-control" id="form-status">
+            <option></option>
             <option>Interested</option>
             <option>Working on Application</option>
             <option>Applied</option>
@@ -85,6 +86,7 @@
           <div class="col">
             <label for="form-interest">Interest Level</label>
             <select class="form-control" id="form-interest">
+              <option></option>
               <option>High</option>
               <option>Medium</option>
               <option>Low</option>
